# chatrag

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: .dockerignore  Dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
src/apps/: special_bridge.py
src/apps/chat/: admin.py  models.py  services.py  urls.py  views.py
src/apps/chat/migrations/: 0001_initial.py  0002_systemprompt.py  0003_conversation_user.py  0004_alter_systemprompt_prompt.py
src/apps/home/: admin.py  apps.py  context.py  context_processors.py  models.py  urls.py  views.py
src/apps/home/fixtures/: home.json
src/apps/home/migrations/: 0001_initial.py  0002_styles.py  0003_rename_styles_style.py
src/apps/home/templatetags/: template_tags.py
src/apps/ingest/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/ingest/migrations/: 0001_initial.py  0002_collection_alter_embeddingconfig_options_document.py  0003_delete_embeddingconfig_remove_document_source_text_and_more.py  0004_documentref_delete_document.py  0005_alter_documentref_nb_chars_and_more.py  0006_documentref_source_origin_documentref_source_type_and_more.py  (+5 more)
src/apps/retrieval/: admin.py  models.py  retriever.py  urls.py  views.py
src/apps/user/: forms.py  middleware.py  models.py  urls.py  views.py
src/src/: celery.py  config.py  media_file_cleaning.py  urls.py  utils.py
src/src/settings/: __init__.py  base.py  develop.example.py  production.example.py
src/static/js/: alertbox.js  chunkslist.js  deconnect.js  deletedoc.js  documentlistener.js  openvideo.js  playvideo.js  readPDF.js  readTXT.js  selectcheckbox.js
src/templates/: alert_box.html  base.html
src/templates/viewer/: chunks_viewer.html  document_viewer.html
src/theme/static_src/: package-lock.json  tailwind.config.js
(+22 files in other folders)
