[project]
name = "chatrag"
version = "0.1.0"
description = ""
authors = [
    {name = "Christophe Vellen",email = "christophe.vellen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "django (==5.2)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "django-debug-toolbar (>=6.3.0,<7.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "django-tailwind[reload] (>=4.4.2,<5.0.0)",
    "django-browser-reload (>=1.12.1,<2.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "langchain (>=1.3.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "langchain-postgres (>=0.0.17,<0.0.18)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "requires (>=0.12.1,<0.13.0)",
    "numpy (>=2.4.5,<3.0.0)",
    "langchain-huggingface (>=1.2.2,<2.0.0)",
    "simple-yt-api (==3.0.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
